--- a/i18n/en/common.properties
+++ b/i18n/en/common.properties
@@ -1,22 +1,22 @@
 title=win8
 
 
-//topbar
-topbarFavorite=favorite
-topbarVIP=VIP
-topbarPlayFree=Play free
 
 //nav
 navHome=home
 navGames=games
-navReal=real
-navQpgames=Chess and Cards
-navFishGame=fish game
-navSport=sport game
-navLottery=lottery
-navVIP=VIP
-navPrefer=prefer
+navService=service
+navRecharge=recharge
+navUserCenter=user center
 
+regFree=Sign Up
+userLogin=Sign In
+
+//侧边栏
+sidenavPrefer=prefer
+sidenavNotices=notices
+sidenavHelp=help
+sidenavHome=home
 
 
 accountPlaceholder=account
@@ -27,11 +27,4 @@ passwordForget=find password
 searchGamesPlaceholder=search game
 
 
-
-//footer
-aboutUs =about Us
-bankHelp =bank Help
-rational =rational
-privacyPolicy =privacy policy
-agreements =agreements
-copyRights =2017 1442.com Entertainment City All Rights Reserved
+442.com Entertainment City All Rights Reserved
