--- a/i18n/en/index.properties
+++ b/i18n/en/index.properties
@@ -2,31 +2,15 @@
 
 banner1Url='./images/en/index/banner_new_33.jpg'
 
-indexNews1=Win 8's new version of the website goes online, with multiple gifts, and 2000 points for registration now
 
 play=play
 
 computerGame=computer game
 
-online=online
-lotteryMonth=lottery month
-dayWithdrawal=day withdrawal
-minimumRecharge=minimum recharge
-withdrawalSpeed=withdrawal speed
-gameTypes= game types
+slot=slot
+real=real
+sport=sport
+poker=poker
 
-//游戏分类
-gameNavHot=Hot
-gameNavxyqp=Lucky chess
-gameNavaqp=Love chess
-gameNavblqp=Bole chess
-gameNavkyqp=Kaiyuan chess
-gameNavTTG=TTG
-gameNavYOPLAY=YOPLAY
-gameNavMG=MG
-gameNavPT=PT
-gameNavBBIN=BBIN
-gameNavPNG=PNG
-gameNavHB=HB
-gameNavAG=AG
-gameNavFish=Fish games
+EnterGameHall=Enter game hall
+WinningList=Winning list
