--- a/i18n/zh-CN/common.properties
+++ b/i18n/zh-CN/common.properties
@@ -1,21 +1,20 @@
 title=赢8娱乐
 
 
-//topbar
-topbarFavorite=加入收藏
-topbarVIP=VIP俱乐部
-topbarPlayFree=免费试玩
-
 //导航
 navHome=首页
 navGames=电子游戏
-navReal=真人直播
-navQpgames=棋牌游戏
-navFishGame=捕鱼游戏
-navSport=体育赛事
-navLottery=彩票游戏
-navVIP=VIP专区
-navPrefer=优惠专区
+navService=客服
+navRecharge=充值
+navUserCenter=会员中心
+
+regFree=免费注册
+userLogin=玩家登录
+
+sidenavPrefer=优惠中心
+sidenavNotices=最新公告
+sidenavHelp=帮助中心
+sidenavHome=首页
 
 
 accountPlaceholder=账号
@@ -24,11 +23,3 @@ verificationCodePlaceholder=验证码
 passwordForget=忘记密码
 
 searchGamesPlaceholder=输入游戏名
-
-//footer
-aboutUs =关于我们
-bankHelp =银行帮助
-rational =理性博彩
-privacyPolicy =隐私政策
-agreements =条款与协议
-copyRights =赢8娱乐城保留所有权利© 2017 1442.com Entertainment City All Rights Reserved
