--- a/i18n/en/common.properties
+++ b/i18n/en/common.properties
@@ -18,6 +18,10 @@ sidenavNotices=notices
 sidenavHelp=help
 sidenavHome=home
 
+//浮动客服
+floatMail=mail
+floatHelp=help
+floatService=sercive
 
 accountPlaceholder=account
 passwordPlaceholder=password
