--- a/i18n/zh-CN/common.properties
+++ b/i18n/zh-CN/common.properties
@@ -11,10 +11,16 @@ navUserCenter=会员中心
 regFree=免费注册
 userLogin=玩家登录
 
+//侧边啦
 sidenavPrefer=优惠中心
 sidenavNotices=最新公告
 sidenavHelp=帮助中心
 sidenavHome=首页
+
+//浮动客服
+floatMail=邮件
+floatHelp=帮助
+floatService=在线客服
 
 
 accountPlaceholder=账号
