--- a/i18n/en/index.properties
+++ b/i18n/en/index.properties
@@ -7,10 +7,40 @@ play=play
 
 computerGame=computer game
 
-slot=slot
-real=real
-sport=sport
-poker=poker
+slot=Slot
+real=Real
+sport=Sport
+poker=Poker
+fish=Fish
+lottery=Lottery
+
+videoPoker=Poker
+classic=Classic
+jackpot=Jackpot
+tableGames=Table game
+gameHall=game hall
+
+ClientDownload=Client download
+playNow=Play now
 
 EnterGameHall=Enter game hall
 WinningList=Winning list
+
+rechargeOnline=Recharge online
+withdraw=Withdraw
+goldCoins=Gold coins
+balance=Balance
+
+userCenter=User center
+
+
+UserInformation=User information
+PasswordManagement=Password management
+MyMessages=My messages
+GameTransfer=Game transfer
+RedEnvelopes=Red envelopes
+records=Records
+PreferentialApplication=Preferential application
+Deposit=Deposit
+
+SignOut=Sign out
