--- a/i18n/zh-CN/index.properties
+++ b/i18n/zh-CN/index.properties
@@ -12,7 +12,34 @@ slot=老虎机
 real=真人
 sport=体育
 poker=棋牌
+fish=捕鱼
+lottery=彩票
+
+videoPoker=电子扑克
+classic=经典游戏
+jackpot=奖池游戏
+tableGames=桌牌游戏
+gameHall=电玩厅
+
+ClientDownload=客户端下载
+playNow=立即游戏
 
 EnterGameHall=进入游戏大厅
 WinningList=中奖排行
+
+rechargeOnline=在线充值
+withdraw=申请提现
+goldCoins=金币
+balance=余额
+
+userCenter=用户中心
+
+UserInformation=用户资料
+PasswordManagement=密码管理
+MyMessages=我的消息
+GameTransfer=游戏转账
+RedEnvelopes=红包
+records=记录
+PreferentialApplication=优惠申请
+Deposit=存款
 
