--- a/i18n/en/common.properties
+++ b/i18n/en/common.properties
@@ -1,4 +1,4 @@
-title=win8
+title=Sea Slot
 
 
 
@@ -31,4 +31,4 @@ passwordForget=find password
 searchGamesPlaceholder=search game
 
 
-1442.com Entertainment City All Rights Reserved
+seaslot.com Entertainment City All Rights Reserved
