--- a/i18n/en/index.properties
+++ b/i18n/en/index.properties
@@ -31,8 +31,11 @@ withdraw=Withdraw
 goldCoins=Gold coins
 balance=Balance
 
-userCenter=User center
 
+
+userCenter=User center
+resetPassword=Reset password
+records=Records
 
 UserInformation=User information
 PasswordManagement=Password management
@@ -43,4 +46,49 @@ records=Records
 PreferentialApplication=Preferential application
 Deposit=Deposit
 
+basicData=basic data
+bankCard=bank card
+SMSsubscription=SMS subscription
+
 SignOut=Sign out
+
+
+regFree=Sign up
+login=Sign in
+
+
+lvNormal=Normal
+lvDiamond=Diamond
+
+
+btnSubmit=submit
+account=account
+fullName=fullName
+phoneNumber=phone
+Email=Email
+addNewCard=Add new card
+
+SMSDeposit=Deposit
+SMSDrawing=Drawing
+SMSCancellationOfWithdrawal=Cancellation of withdrawal
+SMSpreferential=Preferential
+SMSChangeLoginPassword=Change login password
+SMSChangeWithdrawalPassword=Change withdrawal password
+SMSaddReceivingBank=Add aeceiving bank
+SMSModifyName=Modify Name
+SMSModifyContactPhone=Modify contact phone
+SMSDomainChange=Domain change
+SMSChangeCollectionAccount=Change collection account
+SMSWebsiteGreetings=Website greetings
+SMSSpecial=Special SMS
+
+NameOfCardholder=Card holder
+bankName=Bank name
+typeOfCard=Type of card
+locationOfBank=Location of bank
+BankcardNo=Bank card No.
+
+PreferentialRecord=Preferential record
+RechargeRecord=Recharge record
+WithdrawalRecord=Withdrawal record
+
