--- a/i18n/zh-CN/index.properties
+++ b/i18n/zh-CN/index.properties
@@ -33,6 +33,8 @@ goldCoins=金币
 balance=余额
 
 userCenter=用户中心
+resetPassword=重置密码
+records=记录
 
 UserInformation=用户资料
 PasswordManagement=密码管理
@@ -42,4 +44,50 @@ RedEnvelopes=红包
 records=记录
 PreferentialApplication=优惠申请
 Deposit=存款
+
+basicData=基本资料
+bankCard=银行卡管理
+SMSsubscription=短信订阅
+
+
+regFree=免费注册
+login=玩家登录
+
+
+lvNormal=普通会员
+lvDiamond=钻石会员
+
+btnSubmit=提交
+
+account=账号
+fullName=姓名
+phoneNumber=电话
+Email=邮箱
+addNewCard=新增银行卡
+
+SMSDeposit=存款
+SMSDrawing=提款
+SMSCancellationOfWithdrawal=取消提款
+SMSpreferential=优惠
+SMSChangeLoginPassword=修改登录密码
+SMSChangeWithdrawalPassword=修改提款密码
+SMSaddReceivingBank=添加收款银行
+SMSModifyName=修改账户姓名
+SMSModifyContactPhone=修改联系电话
+SMSDomainChange=域名变更
+SMSChangeCollectionAccount=网站更改收款账号
+SMSWebsiteGreetings=网站问候
+SMSSpecial=特殊短信
+
+NameOfCardholder=持卡人姓名
+bankName=银行
+typeOfCard=卡类型
+locationOfBank=开户银行所在地
+BankcardNo=银行卡号
+
+PreferentialRecord=优惠记录
+RechargeRecord=充值记录
+WithdrawalRecord=提现记录
+
+
 
