--- a/i18n/en/common.properties
+++ b/i18n/en/common.properties
@@ -5,9 +5,10 @@ title=Sea Slot
 //nav
 navHome=home
 navGames=games
-navService=service
+navliveChat=live chat
+navpromo=promo
 navRecharge=recharge
-navUserCenter=user center
+navProfile=profile
 
 regFree=Sign Up
 userLogin=Sign In
