--- a/i18n/en/index.properties
+++ b/i18n/en/index.properties
@@ -5,14 +5,18 @@ banner1Url='./images/en/index/banner_new_33.jpg'
 
 play=play
 
-computerGame=computer game
+HotGames=Hot Games
 
-slot=Slot
-real=Real
+slot=Slots
+LiveCasino=Live Casino
+real=Casino
+ESports=E-Sports
+Fishing=Fishing
+fish=Fishing
 sport=Sport
 poker=Poker
-fish=Fish
-lottery=Lottery
+Cockfight=Cockfight
+Lottery=Lottery
 
 videoPoker=Poker
 classic=Classic
@@ -23,15 +27,16 @@ gameHall=game hall
 ClientDownload=Client download
 playNow=Play now
 
-EnterGameHall=Enter game hall
-WinningList=Winning list
+MoreGames=More Games
+WinningList=Winner list
 
 rechargeOnline=Recharge online
 withdraw=Withdraw
 goldCoins=Gold coins
 balance=Balance
-
-
+WithdrawalAmount=Withdrawal amount
+WithdrawalTo=Withdrawal to
+WithdrawalPassword=Withdrawal password
 
 userCenter=User center
 resetPassword=Reset password
@@ -62,6 +67,8 @@ lvDiamond=Diamond
 
 
 btnSubmit=submit
+btnReply=Reply
+
 account=account
 fullName=fullName
 phoneNumber=phone
@@ -84,11 +91,43 @@ SMSSpecial=Special SMS
 
 NameOfCardholder=Card holder
 bankName=Bank name
+BankAccount=Bank Account
+DepositTime=Deposit Time
 typeOfCard=Type of card
 locationOfBank=Location of bank
 BankcardNo=Bank card No.
+ReferenceID=Reference ID
+UploadReceipt=Upload Receipt
 
 PreferentialRecord=Preferential record
 RechargeRecord=Recharge record
 WithdrawalRecord=Withdrawal record
 
+tabWithdrawPassword=Login password
+tabLoginPassword=Withdraw password
+tabAll=All
+tabUnread=Unread
+tabHaveRead=Have read
+tabNew=New
+tabDepositAndDelivery=Deposit
+tabProfitAndLossReward=Reward
+tablongTerm=Long-term
+tabVIPzone=VIP zone
+
+oldLoginPassword=Old login password
+newLoginPassword=New login password
+repeatLoginPassword= Repeat login password
+
+oldWithdrawPassword=Old withdraw password
+newWithdrawPassword=New withdraw password
+repeatWithdrawPassword=Repeat withdraw password
+
+PreferentialApplication=Preferential application
+
+//优惠
+InitialDeposit=Initial deposit
+ApplicationProportion=Application proportion
+BenefitsAvailable=Benefits available
+CycleAvailable=Cycle Available
+CycleProportion=Cycle proportion
+PreferentialAmount=Preferential amount
