--- a/i18n/zh-CN/index.properties
+++ b/i18n/zh-CN/index.properties
@@ -6,14 +6,18 @@ banner1Url='./images/zh-CN/index/banner_new_33.jpg'
 
 play=立即游戏
 
-computerGame=电子游戏
+HotGames=热门游戏
 
 slot=老虎机
-real=真人
-sport=体育
-poker=棋牌
+LiveCasino=真人赌场
+real=真人赌场
+ESports=电竞
+Fishing=捕鱼
 fish=捕鱼
-lottery=彩票
+sport=体育
+poker=扑克
+Cockfight=斗鸡
+Lottery=彩票
 
 videoPoker=电子扑克
 classic=经典游戏
@@ -24,13 +28,16 @@ gameHall=电玩厅
 ClientDownload=客户端下载
 playNow=立即游戏
 
-EnterGameHall=进入游戏大厅
-WinningList=中奖排行
+MoreGames=更多游戏
+WinningList=中奖记录
 
 rechargeOnline=在线充值
 withdraw=申请提现
 goldCoins=金币
 balance=余额
+WithdrawalAmount=提现金额
+WithdrawalTo=提现到
+WithdrawalPassword=提现密码
 
 userCenter=用户中心
 resetPassword=重置密码
@@ -58,6 +65,7 @@ lvNormal=普通会员
 lvDiamond=钻石会员
 
 btnSubmit=提交
+btnReply=回复
 
 account=账号
 fullName=姓名
@@ -81,13 +89,47 @@ SMSSpecial=特殊短信
 
 NameOfCardholder=持卡人姓名
 bankName=银行
+BankAccount=银行账号
+DepositTime=转账时间
 typeOfCard=卡类型
 locationOfBank=开户银行所在地
 BankcardNo=银行卡号
+ReferenceID=充值账号
+UploadReceipt=上传凭证
+
 
 PreferentialRecord=优惠记录
 RechargeRecord=充值记录
 WithdrawalRecord=提现记录
 
+tabWithdrawPassword=登录密码
+tabLoginPassword=提款密码
+tabAll=全部
+tabUnread=未读
+tabHaveRead=已读
+
+tabNew=最新
+tabDepositAndDelivery=存送
+tabProfitAndLossReward=亏盈奖励
+tablongTerm=长期优惠
+tabVIPzone=VIP区
+
+oldLoginPassword=旧登录密码
+newLoginPassword=新登录密码
+repeatLoginPassword=确认登录密码
+
+oldWithdrawPassword=旧提款密码
+newWithdrawPassword=新提款密码
+repeatWithdrawPassword=确认提款密码
+
+PreferentialApplication=优惠申请
+
+//优惠
+InitialDeposit=首存金额
+ApplicationProportion=申请总比例
+BenefitsAvailable=可享受优惠
+CycleAvailable=享受周期
+CycleProportion=周期比例
+PreferentialAmount=优惠金额
 
 
