--- a/i18n/zh-CN/common.properties
+++ b/i18n/zh-CN/common.properties
@@ -4,9 +4,10 @@ title=Sea Slot
 //导航
 navHome=首页
 navGames=电子游戏
-navService=客服
+navpromo=优惠
+navliveChat=客服
 navRecharge=充值
-navUserCenter=会员中心
+navProfile=我的
 
 regFree=免费注册
 userLogin=玩家登录
