feat: help.html?open=918kiss 根据参数跳转到帮助中心制定位置

--- a/i18n/en/common.properties
+++ b/i18n/en/common.properties
@@ -35,3 +35,5 @@ searchGamesPlaceholder=search game
 seaslot.com Entertainment City All Rights Reserved
 
 getsms=Get SMS Code
+
+helpCenter=Help center
